24-03-22/k8s/elk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk-deployment
spec:
  selector:
    matchLabels:
      app: elk
  template:
    metadata:
      labels:
        app: elk
    spec:
      containers:
        - name: elk
          image: sebp/elk:780
          # resources:
          #   limits:
          #     memory: "2000Mi"
          #     cpu: "1000m"
          ports:
            - containerPort: 5601
              name: "kibana"              
            - containerPort: 9200
              name: "els"
            - containerPort: 5044
              name: "logstash"


---


apiVersion: v1
kind: Service
metadata:
  name: elk-service
spec:
  selector:
    app: elk
  type: ClusterIP
  ports:
    - port: 5601
      targetPort: 5601
      name: "kibana"
    - port: 9200
      targetPort: 9200
      name: "els"
    - port: 5044
      targetPort: 5044
      name: "logstash"
