24-03-22/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: many-ingress-sample
  labels:
    name: many-ingress-sample
spec:
  rules:
  - host: rabbitmq.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rabbitmq-service
            port: 
              number: 15672
  - host: mongoexpress.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
  - host: elasticsearch.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: elk-service
            port: 
              number: 9200
  - host: kibana.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: elk-service
            port: 
              number: 5601
  - host: logstash.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: elk-service
            port: 
              number: 5044
