24-03-22/k8s/rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.9-management
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 15672          
          name: "http"
        - containerPort: 5672
          name: "amqp"

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
  - port: 15672
    targetPort: 15672
    name: "http"
  - port: 5672
    targetPort: 5672
    name: "amqp"

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit-ingress
  labels:
    name: rabbit-ingress
spec:
  rules:
  - host: rabbitmq.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rabbitmq-service
            port: 
              number: 15672
